fix: remove overflow hidden

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -30,6 +30,5 @@ html {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   transition: 0.3s;
 }
